[workspace]
resolver = "2"
members = [
  "examples/rust/file_transfer",
  "examples/rust/get_started",
  "examples/rust/tcp_inlet_and_outlet",
  "examples/rust/mitm_node",
  "implementations/rust/ockam/*",
  "tools/docs/example_blocks",
  "tools/docs/example_test_helper",
  "tools/stress-test",
]

# Coverage profile for generating code coverage with grcov.
#
# See https://github.com/rust-lang/rust/issues/78011.
#
[profile.coverage]
panic = "abort"
opt-level = 0
overflow-checks = false
incremental = false
codegen-units = 1
inherits = "test"

[profile.profiling]
debug = 1
strip = "none"
inherits = "release"

# compromise: minimal optimization on selected dependencies
# to reduce cli bootstrap time by ~5x
# mostly caused by syntect theme loading
[profile.dev.package.syntect]
opt-level = 2
[profile.dev.package.adler]
opt-level = 1
