[workspace]
resolver = "2"
members = [
  "examples/rust/file_transfer",
  "examples/rust/get_started",
  "examples/rust/tcp_inlet_and_outlet",
  "examples/rust/mitm_node",
  "implementations/rust/ockam/*",
  "tools/docs/example_blocks",
  "tools/docs/example_test_helper",
]

# Coverage profile for generating code coverage with grcov.
#
# See https://github.com/rust-lang/rust/issues/78011.
#
[profile.coverage]
panic = "abort"
opt-level = 0
overflow-checks = false
incremental = false
codegen-units = 1
inherits = "test"

[profile.profiling]
debug = 1
strip = "none"
inherits = "release"

# compromise: minimal optimization on selected dependencies
# to reduce cli bootstrap time by ~5x
# mostly caused by syntect theme loading
[profile.dev.package.syntect]
opt-level = 2
[profile.dev.package.adler]
opt-level = 1

[workspace.dependencies]
arrayref = { version = "0.3", default-features = false }
cfg-if = { version = "1.0.0", default-features = false }
dyn-clone = { version = "1.0", default-features = false }
either = { version = "1.11.0", default-features = false }
hex = { version = "0.4", default-features = false }
minicbor = { version = "0.24.0", default-features = false }
once_cell = { version = "1.19.0", default-features = false }
quickcheck = { version = "1.0.3", default-features = false }
rand = { version = "0.8", default-features = false }
rand_xorshift = { version = "0.3", default-features = false }
regex = { version = "1.10.4", default-features = false }
rusqlite = { version = "0.30.0", default-features = false }
rustyline = { version = "14.0.0", default-features = false }
rustyline-derive = { version = "0.10.0", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
sha2 = { version = "0.10", default-features = false }
sqlx = { version = "0.7.4", default-features = false }
str-buf = { version = "3.0.3", default-features = false }
strum = { version = "0.26.2", default-features = false }
tempfile = { version = "3.10.1", default-features = false }
tokio = { version = "1.37", default-features = false }
tracing = { version = "0.1", default-features = false }
trybuild = { version = "1.0", default-features = false }
wast = { version = "206.0.0", default-features = false }
