[workspace]

members = [
    "common",
    "daemon",
    "examples",
    "kex/traits",
    "kex/xx",
    "kex/x3dh",
    "ffi",
    "vault/traits",
    "vault/software",
    "vault/file",
    "router",
    "queue_topic",
    "transport",
    "node",
    "c/generate_bindings",
    "c/bindings",
    "c/rust_memory",
    "message_router",
    "queue",
    "tcp_manager",
    "worker_manager",
]

exclude = [
    "okta"
]

default-members = [
    "common",
    "daemon",
    "examples",
    "kex/traits",
    "kex/xx",
    "kex/x3dh",
    "ffi",
    "vault/traits",
    "vault/software",
    "vault/file",
    "router",
    "queue_topic",
    "transport",
    "node",
    "c/bindings",
    "c/rust_memory",
    "message_router",
    "queue",
    "tcp_manager",
    "worker_manager",
]
