[workspace]

members = [
    "common",
    "daemon",
    "examples",
    "kex",
    "vault/traits",
    "vault/software",
    "vault/file",
    "vault/ffi",
    "router",
    "queue_topic",
    "transport",
    "node",
    "c/generate_bindings",
    "c/bindings",
    "c/rust_memory",
    "message_router",
    "tcp_manager",
    "worker_manager",
]

default-members = [
    "common",
    "daemon",
    "examples",
    "kex",
    "vault/traits",
    "vault/software",
    "vault/file",
    "vault/ffi",
    "router",
    "queue_topic",
    "transport",
    "node",
    "c/bindings",
    "c/rust_memory",
    "message_router",
    "tcp_manager",
    "worker_manager",
]
