[workspace]

members = [
    "common",
    "daemon",
    "examples",
    "kex",
    "vault/traits",
    "vault/software",
    "vault/file",
    "vault/ffi",
    "router",
    "queue_topic",
    "transport",
    "node",
#    "worker",
    "c/generate_bindings",
    "c/bindings",
    "c/rust_memory",
]

default-members = [
    "common",
    "daemon",
    "examples",
    "kex",
    "vault/traits",
    "vault/software",
    "vault/file",
    "vault/ffi",
    "router",
    "queue_topic",
    "transport",
    "node",
#    "worker",
    "c/bindings",
    "c/rust_memory",
]
