[package]
name = "ockam-hub-cli"
version = "0.1.0"
authors = ["piiih <piih_@live.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.21"
reqwest = { version = "0.11.2", features = ["blocking", "json"]  }
tokio = { version = "1.4", features = ["full"]  }
serde = { version = "1.0.125", features = ["derive"]  }
serde_json = "1.0.59"
url = "2.2.1"
webbrowser = "0.5.5"
