[package]
name = "file_transfer"
version = "0.1.0"
authors = ["Ockam Developers"]
edition = "2021"
license = "Apache-2.0"
publish = false
rust-version = "1.56.0"

[dependencies]
ockam = { path = "../../../implementations/rust/ockam/ockam" }
structopt = { version = "0.3.25", default-features = false }
tokio = { version = "1.26.0", features = ["fs", "io-util"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
anyhow = "1.0.69"

[dev-dependencies]
example_test_helper = { path = "../../../tools/docs/example_test_helper" }
file_diff = "1"
rand = "0.8"
