[package]
name = "file_transfer"
version = "0.1.0"
authors = ["Ockam Developers"]
edition = "2021"
license = "Apache-2.0"
publish = false
rust-version = "1.70.0"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "wrap_help"] }
ockam = { path = "../../../implementations/rust/ockam/ockam" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tokio = { version = "1.39", features = ["fs", "io-util"] }

[dev-dependencies]
example_test_helper = { path = "../../../tools/docs/example_test_helper" }
file_diff = "1"
