[package]
name = "hello_ockam"
version = "0.1.0"
authors = ["Ockam Developers"]
edition = "2021"
license = "Apache-2.0"
publish = false
rust-version = "1.56.0"

[features]
default = ["std"]

# Feature (enabled by default): "std" enables functionality expected to
# be available on a standard platform.
std = ["ockam/default", "ockam_transport_websocket", "serde_json/default"]

# Feature: "no_std" enables functionality required for platforms
# without the standard library.
no_std = ["ockam/no_std"]

# Feature: "alloc" enables support for heap allocation on "no_std"
# platforms, requires nightly.
alloc = ["ockam/alloc", "serde_json/alloc"]

[dependencies]
ockam = { path = "../../../implementations/rust/ockam/ockam", default_features = false, features = [
    "software_vault",
] }
ockam_transport_websocket = { path = "../../../implementations/rust/ockam/ockam_transport_websocket", optional = true }
ockam_transport_udp = { path = "../../../implementations/rust/ockam/ockam_transport_udp" }
serde = { version = "1", default_features = false, features = ["derive"] }
serde_json = { version = "1.0", default_features = false }
hex = "0.4"

[dev-dependencies]
rand = { version = "0.8.4", features = ["std_rng"], default-features = false }
example_test_helper = { path = "../../../tools/docs/example_test_helper" }
serial_test = "0.6.0"
