[package]
name = "hello_ockam"
version = "0.1.0"
authors = ["Ockam Developers"]
edition = "2021"
license = "Apache-2.0"
publish = false
rust-version = "1.56.0"

[features]
default = ["std"]

# Feature (enabled by default): "std" enables functionality expected to
# be available on a standard platform.
std = [
  "ockam/default",
  "ockam_transport_websocket",
  "serde_json/default",
  "ockam_multiaddr/std",
  "ockam_api/std",
  "ockam_api/authenticators",
]

# Feature: "no_std" enables functionality required for platforms
# without the standard library.
no_std = ["ockam/no_std"]

# Feature: "alloc" enables support for heap allocation on "no_std"
# platforms, requires nightly.
alloc = ["ockam/alloc", "serde_json/alloc"]

[dependencies]
anyhow = "1"
hex = "0.4"
minicbor = { version = "0.19.0", features = ["alloc", "derive"] }
ockam = { path = "../../../implementations/rust/ockam/ockam", default_features = false, features = ["software_vault"] }
ockam_api = { path = "../../../implementations/rust/ockam/ockam_api" }
ockam_core = { path = "../../../implementations/rust/ockam/ockam_core" }
ockam_multiaddr = { path = "../../../implementations/rust/ockam/ockam_multiaddr" }
ockam_node = { path = "../../../implementations/rust/ockam/ockam_node" }
ockam_transport_tcp = { path = "../../../implementations/rust/ockam/ockam_transport_tcp" }
ockam_transport_udp = { path = "../../../implementations/rust/ockam/ockam_transport_udp" }
ockam_transport_uds = { path = "../../../implementations/rust/ockam/ockam_transport_uds" }
ockam_transport_websocket = { path = "../../../implementations/rust/ockam/ockam_transport_websocket", optional = true }
ockam_vault = { path = "../../../implementations/rust/ockam/ockam_vault" }
r3bl_ansi_color = "0.6.7"
serde = { version = "1", default_features = false, features = ["derive"] }
serde_bare = "0.5.0"
serde_json = { version = "1.0", default_features = false }

[dev-dependencies]
example_test_helper = { path = "../../../tools/docs/example_test_helper" }
rand = { version = "0.8.5", features = ["std_rng"], default-features = false }
serial_test = "2.0.0"
