[package]
name = "hello_ockam"
version = "0.1.0"
authors = ["Ockam Developers"]
edition = "2021"
license = "Apache-2.0"
publish = false
rust-version = "1.56.0"

[features]
default = ["std"]

# Feature (enabled by default): "std" enables functionality expected to
# be available on a standard platform.
std = [
  "ockam/default",
  "serde_json/default",
  "ockam_multiaddr/std",
  "ockam_api/std",
  "storage",
]

# Feature: "no_std" enables functionality required for platforms
# without the standard library.
no_std = ["ockam/no_std"]

# Feature: "alloc" enables support for heap allocation on "no_std"
# platforms, requires nightly.
alloc = ["ockam/alloc", "serde_json/alloc"]
storage = ["ockam_api/storage"]

[dependencies]
anyhow = "1"
hex = "0.4"
ockam = { path = "../../../implementations/rust/ockam/ockam", default-features = false, features = ["software_vault"] }
ockam_api = { path = "../../../implementations/rust/ockam/ockam_api" }
ockam_core = { path = "../../../implementations/rust/ockam/ockam_core" }
ockam_multiaddr = { path = "../../../implementations/rust/ockam/ockam_multiaddr" }
ockam_transport_tcp = { path = "../../../implementations/rust/ockam/ockam_transport_tcp" }
ockam_transport_udp = { path = "../../../implementations/rust/ockam/ockam_transport_udp" }
ockam_transport_uds = { path = "../../../implementations/rust/ockam/ockam_transport_uds" }
serde_json = { version = "1.0", default-features = false }

[dev-dependencies]
example_test_helper = { path = "../../../tools/docs/example_test_helper" }
rand = { version = "0.8.5", features = ["std_rng"], default-features = false }
serial_test = "3.0.0"
