[package]
name = "mitm_node"
version = "0.1.0"
authors = ["Ockam Developers"]
edition = "2021"
license = "Apache-2.0"
publish = false
rust-version = "1.56.0"

[[bin]]
name = "tcp_mitm"

[lib]

[features]
default = ["std"]
std = []

[dependencies]
ockam = { path = "../../../implementations/rust/ockam/ockam" }
ockam_core = { path = "../../../implementations/rust/ockam/ockam_core" }
ockam_node = { path = "../../../implementations/rust/ockam/ockam_node" }
ockam_transport_core = { path = "../../../implementations/rust/ockam/ockam_transport_core" }
tokio = { version = "1.29", features = ["rt-multi-thread", "sync", "net", "macros", "time", "io-util"] }
tracing = { version = "0.1", default-features = false }
