[package]
name = "hello_ockam_no_std"
version = "0.1.0"
authors = ["Ockam Developers"]
edition = "2021"
publish = false
readme = "README.md"
resolver = "2"

[workspace]

[features]
default = ["std"]

# Feature (enabled by default): "std" enables functionality expected to
# be available on a standard platform.
std = [
  "ockam/default",
]

# Feature: "no_std" enables functionality required for platforms
# without the standard library.
no_std = [
  "ockam/no_std",
]

# Feature: "alloc" enables support for heap allocation on "no_std"
# platforms, requires nightly.
alloc = [
  "ockam/alloc",
]

# Feature: "debugger" enables functionality to trace addresses and
# message flows within Ockam apps.
debugger = ["ockam/debugger"]

cortexm = [
  "alloc-cortex-m",
  "cortex-m",
  "cortex-m-rt",
  "cortex-m-semihosting",
  "panic-semihosting",
  "log-semihosting",
]

qemu = ["no_std", "alloc", "cortexm"]
atsame54 = ["no_std", "alloc", "cortexm", "atsame54_xpro"]
stm32f4 = ["no_std", "alloc", "cortexm", "stm32f4xx-hal"]

log-itm = []
log-semihosting = []
log-uart = []

[dependencies]
ockam = { path = "../../../../implementations/rust/ockam/ockam", optional = true, default-features = false, features = ["software_vault"] }

alloc-cortex-m = { version = "0.4.1", optional = true }
cortex-m = { version = "0.7.2", optional = true }
cortex-m-rt = { version = "0.7.3", optional = true }
cortex-m-semihosting = { version = "0.3.7", optional = true }
panic-semihosting = { version = "0.5.6", optional = true }
tracing = { version = "0.1", default-features = false }

atsame54_xpro = { version = "0.4.0", optional = true }
stm32f4xx-hal = { version = "0.15.0", features = ["rt", "stm32f407"], optional = true }

[profile.dev]
debug = true
opt-level = "s"

[profile.release]
debug = true
incremental = false
lto = true
opt-level = "z"
codegen-units = 1
