[package]
name = "ockam_influxdb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ockam = { path = "../../../implementations/rust/ockam/ockam" }
ockam_entity = { path = "../../../implementations/rust/ockam/ockam_entity", features = ["lease_proto_json"] }

ockam_transport_tcp = { path = "../../../implementations/rust/ockam/ockam_transport_tcp" }
reqwest = { version = "0", features = ["json"] }
rand = "0"
