[package]
name = "ockam_kafka"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.56.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ockam = { path = "../../../implementations/rust/ockam/ockam" }

[dev-dependencies]
example_test_helper = { path = "../../../tools/docs/example_test_helper" }
