[package]
name = "rendezvous"
version = "0.1.0"
authors = ["Ockam Developers"]
edition = "2021"
license = "Apache-2.0"
publish = false
rust-version = "1.56.0"

[dependencies]
ockam = { path = "../../../implementations/rust/ockam/ockam" }
ockam_core = { path = "../../../implementations/rust/ockam/ockam_core" }
ockam_macros = { path = "../../../implementations/rust/ockam/ockam_macros" }
ockam_node = { path = "../../../implementations/rust/ockam/ockam_node" }
ockam_transport_udp = { path = "../../../implementations/rust/ockam/ockam_transport_udp" }

[[bin]]
name = "client"

[[bin]]
name = "echo_server"
