
add_subdirectory(error)

add_subdirectory(log)

add_subdirectory(memory)
add_subdirectory(memory/stdlib)

add_subdirectory(random)
add_subdirectory(random/urandom)

add_subdirectory(io)

add_subdirectory(queue)
add_subdirectory(queue/pthread)

add_subdirectory(mutex)
add_subdirectory(mutex/pthread)

add_subdirectory(vault)
add_subdirectory(vault/default)
# add_subdirectory(vault/atecc608a)
# add_subdirectory(vault/atecc508a)

add_subdirectory(transport)

add_subdirectory(key_agreement)
add_subdirectory(key_agreement/xx)

add_subdirectory(codec)

add_subdirectory(channel)

# add_subdirectory(router)
