[package]
authors = ["Ockam Developers"]
edition = "2018"
name = "ockam-ffi"
version = "0.1.0"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[profile.release]
lto = true

[dependencies]
ockam-common = { version = "0.1", path = "../common", features = ["ffi"] }
ockam-kex = { version = "0.1", path = "../kex/traits" }
ockam-kex-xx = { version = "0.1", path = "../kex/xx" }
ockam-vault = { version = "0.1", path = "../vault/traits" }
ockam-vault-software = { version = "0.1", path = "../vault/software" }
ockam-vault-file = { version = "0.1", path = "../vault/file" }
lazy_static = { version = "1.4"}
