[package]
name = "ockam"
version = "0.1.0"
authors = ["Ockam Developers"]
edition = "2018"

[profile.release]
lto = true

[features]
default = ["ockam-common/default", "ockam-vault-software", "ockam-kex-xx"]
ffi = ["ockam-common/default", "ockam-ffi"]

[dependencies]
failure = "0.1"
hex = "0.4"
ockam-common = { version = "0.1", path = "../common", default-features = false }
ockam-kex = { version = "0.1", path = "../kex/traits"}
ockam-kex-xx = { version = "0.1", path = "../kex/xx", optional = true }
ockam-ffi = { version = "0.1", path = "../ffi", optional = true }
ockam-queue-topic = { version = "0.1", path = "../queue_topic" }
ockam-vault = { version = "0.1", path = "../vault/traits" }
ockam-vault-software = { version = "0.1", path = "../vault/software", optional = true}
rand = "0.7"
