[package]
authors = ["Ockam Developers"]
edition = "2018"
name = "ockam-channel"
version = "0.1.0"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[profile.release]
lto = true

[dependencies]
ockam-common = { version = "0.1", path = "../common" }
ockam-kex = { version = "0.1", path = "../kex" }
ockam-vault = { version = "0.1", path = "../vault" }
