[package]
authors = ["Ockam Developers"]
edition = "2018"
name = "ockam-channel"
version = "0.1.0"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[profile.release]
lto = true

[features]
default = []

[dependencies]
failure = "0.1"
ockam-common = { version = "0.1", path = "../common" }
ockam-message = { version = "0.1", path = "../message" }
ockam-kex = { version = "0.1", path = "../kex" }
ockam-vault = { version = "0.1", path = "../vault" }
rand = "0.7"
hex = "0.4.2"

[dev-dependencies]
ockam-router = { version = "0.1", path = "../router" }
