[package]
name = "ockamd"
version = "0.1.0"
authors = ["Ockam Developers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
structopt = { version = "0.3.19", default-features = false }
url = "2.1.1"
ockam-common = { path = "../common", version = "0.1.0" }
ockam-message = { path = "../message", version = "0.1.0" }
ockam-vault = { path = "../vault", version = "0.1.0" }
ockam-channel = { path = "../channel", version = "0.1.0" }
ockam-kex = { path = "../kex", version = "0.1.0" }
ockam-transport = { path = "../transport", version = "0.1.0" }
ockam-router = { path = "../router", version = "0.1.0" }
zeroize = { version = "1.1", features = ["zeroize_derive"] }