[package]
authors = ["Ockam Developers"]
edition = "2018"
name = "kex"
version = "0.1.0"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[profile.release]
lto = true

[features]
default = []
ffi = ["ffi-support", "lazy_static"]

[dependencies]
arrayref = "0.3"
ffi-support = { version = "0.4.0", optional = true }
lazy_static = { version = "1.4", optional = true }
ockam-vault = { version = "0.1", path = "../vault" }
